@@ -44,18 +44,20 @@ hildon_application_manager_launch_SOURCES = main.h			\
                                             confutils.cc		\
                                             update-notifier-conf.h      \
                                             user_files.h                \
-                                            user_files.c
+                                            user_files.c                \
+                                            apt-utils.h                 \
+                                            apt-utils.cc
 hildon_application_manager_launch_CFLAGS =   $(HAM_DEPS_CFLAGS) -shared
 hildon_application_manager_launch_CXXFLAGS = $(HAM_DEPS_CFLAGS) -shared \
                                              -fno-rtti -fno-exceptions
 hildon_application_manager_launch_LDFLAGS =  -shared \
                                              -Wl,--version-script=$(srcdir)/export.map
-hildon_application_manager_launch_LDADD =    $(HAM_DEPS_LIBS)
+hildon_application_manager_launch_LDADD =    $(HAM_DEPS_LIBS) -lapt-pkg
 
 hildon_application_manager_run_SOURCES =  $(hildon_application_manager_launch_SOURCES)
 hildon_application_manager_run_CFLAGS =   $(HAM_DEPS_CFLAGS)
 hildon_application_manager_run_CXXFLAGS = $(HAM_DEPS_CFLAGS)
-hildon_application_manager_run_LDADD =    $(HAM_DEPS_LIBS)
+hildon_application_manager_run_LDADD =    $(HAM_DEPS_LIBS) -lapt-pkg
 
 hildon_application_manager_config_SOURCES =		\
                hildon-application-manager-config.cc	\
